added Json column support and option to add view + release v0.9.6